fixed spacing on about page header

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -188,7 +188,7 @@
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
     font-size: 24px;
-    width: 450px;
+    width: 350px;
     margin: auto;
     margin-top: 75px;
     color: black;
